<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/collatz_conjecture"
        android:textSize="40sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:hint="@string/enter_number_prompt"
                android:inputType="number"
                android:minHeight="48dp"
                android:tooltipText="hello"
                tools:targetApi="o" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/tooltip"
                android:tooltipText="f(n)={n/2 if n is even \n
         3n+1 if n is odd"
                tools:targetApi="o" />
        </RelativeLayout>

        <Button
            android:id="@+id/calculate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/compute"

            android:textColor="@color/white" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/display_button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/flip_image_button"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/black"
                android:src="@drawable/ic_baseline_swap_vert_24"

                android:tooltipText="Flip List"
                tools:targetApi="o" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_reverse"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:text="@string/reverse" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/numDisplayTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/total_iteration"
                android:textSize="16sp"

                />

            <TextView
                android:id="@+id/numDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/number_display"
                android:textSize="32sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/sort_image_button"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/black"
                android:src="@drawable/ic_baseline_sort_24"
                android:tooltipText="Sort List"
                tools:targetApi="o" />


            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_sort"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:text="@string/sort" />
        </LinearLayout>


    </RelativeLayout>


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:tabSelectedTextColor="@color/material_on_background_emphasis_high_type"
        app:tabIndicatorColor="#7AFFFFFF">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iteration" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/even" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/odd" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chart" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager2"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:visibility="gone" />

</LinearLayout>